[package]
name = "temporal-test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.43"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
temporal-client = { version = "0.1.0-alpha.1", git = "https://github.com/temporalio/sdk-core", rev = "a3c2b2d6a1c5b427da0b2763eeb6e96d6010f310" }
temporal-sdk = { version = "0.1.0-alpha.1", git = "https://github.com/temporalio/sdk-core", rev = "a3c2b2d6a1c5b427da0b2763eeb6e96d6010f310" }
temporal-sdk-core = { version = "0.1.0-alpha.1", git = "https://github.com/temporalio/sdk-core", rev = "a3c2b2d6a1c5b427da0b2763eeb6e96d6010f310" }
temporal-sdk-core-api = { version = "0.1.0-alpha.1", git = "https://github.com/temporalio/sdk-core", rev = "a3c2b2d6a1c5b427da0b2763eeb6e96d6010f310" }
temporal-sdk-core-protos = { version = "0.1.0-alpha.1", git = "https://github.com/temporalio/sdk-core", rev = "a3c2b2d6a1c5b427da0b2763eeb6e96d6010f310" }
tokio = { version = "1.1.1", features = ["macros", "parking_lot", "process", "rt-multi-thread", "signal", "time"] }
